--- a/Shop/Views/Shared/_Footer.cshtml
+++ b/Shop/Views/Shared/_Footer.cshtml
@@ -5,7 +5,7 @@
                 <div class="col-md-3">
                     <div class="footer-widget">
                         <div class="footer-logo">
-                            <a href="index1.html"><img src="images/logo.png" alt="Logo" class="img-fluid"></a>
+                            <a href="index1.html"><img src="~/images/logo.png" alt="Logo" class="img-fluid"></a>
                         </div>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                         <div class="footer-social">
@@ -65,10 +65,10 @@
             <div class="float-right">
                 <div class="float-left">
                     <ul class="payment-card global-list">
-                        <li><img src="images/others/card1.png" alt="Payment Card" class="img-fluid"></li>
-                        <li><img src="images/others/card2.png" alt="Payment Card" class="img-fluid"></li>
-                        <li><img src="images/others/card3.png" alt="Payment Card" class="img-fluid"></li>
-                        <li><img src="images/others/card4.png" alt="Payment Card" class="img-fluid"></li>
+                        <li><img src="~/images/others/card1.png" alt="Payment Card" class="img-fluid"></li>
+                        <li><img src="~/images/others/card2.png" alt="Payment Card" class="img-fluid"></li>
+                        <li><img src="~/images/others/card3.png" alt="Payment Card" class="img-fluid"></li>
+                        <li><img src="~/images/others/card4.png" alt="Payment Card" class="img-fluid"></li>
                     </ul>
                 </div><!-- /.payment-card -->
                 <div class="float-right">
