--- a/Shop/Views/Shared/_Sidebar.cshtml
+++ b/Shop/Views/Shared/_Sidebar.cshtml
@@ -24,7 +24,7 @@
         </div><!-- /.widget -->
 
         <div class="widget widget_media_image">
-            <img src="images/blog/widget2.jpg" alt="Image" class="img-fluid">
+            <img src="~/images/blog/widget2.jpg" alt="Image" class="img-fluid">
         </div><!-- /.widget -->
 
         <div class="widget widget_recent_entries">
@@ -34,7 +34,7 @@
                     <div class="product">
                         <a href="shop-details.html" class="media">
                             <span class="product-image">
-                                <img src="images/product/product1.png" alt="Image" class="img-fluid">
+                                <img src="~/images/product/product1.png" alt="Image" class="img-fluid">
                             </span>
                             <span class="product-info media-body">
                                 <span class="product-title">Organic <strong>Tomato</strong></span>
@@ -47,7 +47,7 @@
                     <div class="product">
                         <a href="shop-details.html" class="media">
                             <span class="product-image">
-                                <img src="images/product/product2.png" alt="Image" class="img-fluid">
+                                <img src="~/images/product/product2.png" alt="Image" class="img-fluid">
                             </span>
                             <span class="product-info media-body">
                                 <span class="product-title">Organic <strong>Cabbage</strong></span>
@@ -60,7 +60,7 @@
                     <div class="product">
                         <a href="shop-details.html" class="media">
                             <span class="product-image">
-                                <img src="images/product/product3.png" alt="Image" class="img-fluid">
+                                <img src="~/images/product/product3.png" alt="Image" class="img-fluid">
                             </span>
                             <span class="product-info media-body">
                                 <span class="product-title">Organic <strong>Onion</strong></span>
